--- a/pagePhotographe.html
+++ b/pagePhotographe.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-    <meta charset="utf-8" />
-    <title>FishEye</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8730c06133.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/svg" href="./images/favicon.svg" />
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+    <title>FishEye - Nos photographes</title>
 </head>
-
 <body>
+    <header class="header" role="banner">
+        <a class="header_logo" href="index.html">
+            <img src="./images/logo.svg" alt="Fisheye Home page">
+        </a>
+    </header>
 
-
-    <footer>
-    </footer>
+    <script src="./javascript/photographe.js"></script>
 </body>
-
 </html>
