photographe page and tags filter

--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
             <ul class="tag_list">
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#portrait</a>
+                    <a class="tag_link" href="#" data-tag="portrait">#portrait</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#events</a>
+                    <a class="tag_link" href="#" data-tag="event">#events</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#travel</a>
+                    <a class="tag_link" href="#" data-tag="travel">#travel</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#animals</a>
+                    <a class="tag_link" href="#" data-tag="animal">#animals</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#sport</a>
+                    <a  class="tag_link" href="#" data-tag="sport">#sport</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#architecture</a>
+                    <a class="tag_link" href="#" data-tag="architecture">#architecture</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#art</a>
+                    <a class="tag_link" href="#" data-tag="art">#art</a>
                 </li>
 
                 <li>
                     <span class="sr_only">Tag link</span>
-                    <a class="tag_link" href="#">#fashion</a>
+                    <a class="tag_link" href="#" data-tag="fashion">#fashion</a>
                 </li>
             </ul>
         </nav>
@@ -72,7 +72,7 @@
 
         <!--Description des photographes-->
         <div id="photographes_container">
-
+            
         </div>
     </main>
     <script src="./javascript/index.js"></script>
