--- a/pagePhotographe.html
+++ b/pagePhotographe.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8730c06133.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg" href="./images/favicon.svg" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href=".public/css/style.css">
     <title>FishEye - Nos photographes</title>
 </head>
 <body>
@@ -15,7 +15,15 @@
             <img src="./images/logo.svg" alt="Fisheye Home page">
         </a>
     </header>
+    <main class="main_photgraphe">
+        <section id="banner_photographe_container">
+            
+        </section>
 
-    <script src="./javascript/photographe.js"></script>
+        <section class="medias_photographe">
+        </section>
+    </main>
+
+    <script src="./javascript/photo.js"></script>
 </body>
 </html>
