add lightBox of media and forum of contact me button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header" role="banner">
         <!--Bouton caché apparaissant au scroll-->
-        <a class="header_scroll" aria-label="Passer au contenu" href="#">Passer au contenu</a>
+        <a id="header_scroll" aria-label="Passer au contenu" href="#">Passer au contenu</a>
         <a class="header_logo" href="index.html">
             <img src="./images/logo.svg" alt="Fisheye Home page">
         </a>
