improve accessibility and documentation

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <body>
     <header class="header" role="banner">
         <!--Bouton caché apparaissant au scroll-->
-        <a id="header_scroll" aria-label="Passer au contenu" href="#">Passer au contenu</a>
+        <a id="header_scroll" aria-label="Passer au contenu" role="link" href="#">Passer au contenu</a>
         <a class="header_logo" href="index.html">
-            <img src="./images/logo.svg" alt="Fisheye Home page">
+            <img src="./images/logo.svg" role="image link" alt="Fisheye Home page">
         </a>
         <!--Filtres des spécialités des photographes-->
-        <nav aria-label="photographer categories" class="header_filter">
+        <nav aria-label="photographer categories" class="header_filter" role="links">
             <ul class="tag_list">
                 <li>
                     <span class="sr_only">Tag link</span>
@@ -71,7 +71,7 @@
     </header>
     <main>
         <!--Titre principal positionné à dans le header à droite-->
-        <h1 id="main_title">Nos photographes</h1>
+        <h1 id="main_title" role="header">Nos photographes</h1>
 
         <!--Description des photographes-->
         <div id="photographes_container">
