--- a/photographer.html
+++ b/photographer.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header" role="banner">
         <a class="header_logo" href="index.html">
-            <img src="./images/logo.svg" alt="Fisheye Home page">
+            <img src="./images/logo.svg" role="link image" alt="Fisheye Home page">
         </a>
     </header>
     <main class="main_photgraphe">
@@ -92,6 +92,6 @@
         </div>
     </div>
 
-    <script src="./javascript/photo.js"></script>
+    <script src="./javascript/photographer.js"></script>
 </body>
 </html>
