rename public folder to build

--- a/photographer.html
+++ b/photographer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8730c06133.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg" href="./images/favicon.svg" />
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="build/css/style.css">
     <title>FishEye - Nos photographes</title>
 </head>
 
