--- a/photographer.html
+++ b/photographer.html
@@ -14,11 +14,13 @@
 <body id="body">
     <header class="header" role="banner">
         <a class="header_logo" href="index.html">
-            <img src="./images/logo.svg" role="link image" alt="Fisheye Home page">
+            <img src="./images/logo.svg" role="link image" alt="logo Fisheye - Home page">
         </a>
     </header>
     <main id="main_photgraphers" aria-hidden="false">
-        <button type="button" id="contactButton" onclick="openModal($contactMeModal)">Contactez-moi
+        <button type="button" id="contactButtonPhone" onclick="openModal($contactMeModal)">Contactez-moi
+        </button>
+        <button type="button" id="contactButtonDesktop" onclick="openModal($contactMeModal)">Contactez-moi
         </button>
     
         <section id="banner_photographe_container">
@@ -27,9 +29,11 @@
         <section class="sortBy">
             <label class="sortby_label" for="trier" aria-label="Order by">Trier par</label>
             <select class="dropdown" name="trigger" id="trier">
-                <option class="dropdown_list" value="likes">Popularité</option>
-                <option class="dropdown_list" value="date">Date</option>
-                <option class="dropdown_list" value="title">Titre</option>
+                <optgroup role="group">
+                    <option class="dropdown_list" value="likes" role="option">Popularité</option>
+                    <option class="dropdown_list" value="date" role="option">Date</option>
+                    <option class="dropdown_list" value="title" role="option">Titre</option>
+                </optgroup>
             </select>
 
         </section>
@@ -77,7 +81,7 @@
                     <textarea class="text-control" name="message" id="message" aria-label="Your message"></textarea>
                     <span id="erreur_essage"></span>
                     <!--send button-->
-                    <button class="btn_submit" type="submit" aria-label="Send" >Envoyer</button>
+                    <button class="btn_submit" type="submit"  aria-label="Send"  >Envoyer</button>
                     </fieldset>
 
                 </form>
