add modifications on media photographer and lightbox css

--- a/photographer.html
+++ b/photographer.html
@@ -28,14 +28,13 @@
         </section>
         <section class="sortBy">
             <label class="sortby_label" for="trier" aria-label="Order by">Trier par</label>
-            <select class="dropdown" name="trigger" id="trier">
-                <optgroup role="group">
-                    <option class="dropdown_list" value="likes" role="option">Popularité</option>
-                    <option class="dropdown_list" value="date" role="option">Date</option>
-                    <option class="dropdown_list" value="title" role="option">Titre</option>
-                </optgroup>
-            </select>
-
+            <div class="dropdown" name="trigger" id="trier">
+                <select>
+                    <option  value="likes" role="option">Popularité</option>
+                    <option  value="date" role="option">Date</option>
+                    <option  value="title" role="option">Titre</option>
+                <select>
+                </div>
         </section>
         <section id="medias_photographe">
             <!--Photographer's media presentation-->
