add heart icone on totale likes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header" role="banner">
         <!--Bouton caché apparaissant au scroll-->
-        <a id="header_scroll" aria-label="Passer au contenu" role="link" href="#">Passer au contenu</a>
+        <a id="header_scroll" aria-label="Passer au contenu" role="link" href="#" tabindex="0">Passer au contenu</a>
         <a class="header_logo" href="index.html">
             <img src="./images/logo.svg" role="image link" alt="Fisheye Home page">
         </a>
