add asssociated label for select

--- a/photographer.html
+++ b/photographer.html
@@ -31,7 +31,7 @@
       <section class="sortBy">
         <label class="sortby_label" for="trier" aria-label="Order by">Trier par</label>
         <div class="dropdown" name="trigger" id="trier">
-            <select>
+            <select name="dropdown" id="trier">
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
                 <option  value="title" role="option" >Titre</option>
