--- a/photographer.html
+++ b/photographer.html
@@ -29,8 +29,8 @@
         
       <!-- Section 2 : Filtre -->
       <section class="sortBy">
-        <label class="sortby_label" for="trier" aria-label="Order by">Trier par</label>
-        <div class="dropdown" name="trigger" id="sort">
+        <label class="sortby_label" for="sort" aria-label="Order by">Trier par</label>
+        <div class="dropdown" name="trigger" id="trier">
             <select name="dropdown" id="sort">
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
