add asssociated label for select

--- a/photographer.html
+++ b/photographer.html
@@ -31,8 +31,8 @@
       <section class="sortBy">
         
         <div class="dropdown" name="trigger" id="trier">
-        <label class="sortby_label" for="sort" aria-label="Order by">Trier par</label>
-            <select name="dropdown" id="sort">
+        <label class="sortby_label" for="menu">Trier par</label>
+            <select name="dropdown" id="menu">
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
                 <option  value="title" role="option" >Titre</option>
