--- a/photographer.html
+++ b/photographer.html
@@ -32,7 +32,7 @@
         
         <div class="dropdown" name="trigger" id="trier">
         <label class="sortby_label" for="menu">Trier par</label>
-            <select name="dropdown" id="menu">
+            <select name="menu" id="menu">
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
                 <option  value="title" role="option" >Titre</option>
