--- a/photographer.html
+++ b/photographer.html
@@ -31,13 +31,13 @@
       <section class="sortBy">
         
         <div class="dropdown" name="trigger" id="trier">
-        <label class="sortby_label" for="menu">Trier par</label>
-            <select name="menu" id="menu">
+            <label class="sortby_label" for="dropdown">Trier par</label>
+            <select name="dropdown" id="dropdown">
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
                 <option  value="title" role="option" >Titre</option>
             <select>
-            </div>
+        </div>
     </section>
 
         <section id="medias_photographe">
