add asssociated label for select

--- a/photographer.html
+++ b/photographer.html
@@ -36,7 +36,7 @@
                 <option  value="likes" role="option" tabindex="0">Popularité</option>
                 <option  value="date" role="option" tabindex="0">Date</option>
                 <option  value="title" role="option" >Titre</option>
-            <select>
+            </select>
         </div>
     </section>
 
