update JASON file

--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
         </a>
     </header>
     <main id="main_photgraphers" aria-hidden="false">
-        <button type="button" id="contactButtonPhone" onclick="openModal($contactMeModal)">Contactez-moi
+        <button type="button" id="contactButtonPhone" tabindex="0" onclick="openModal($contactMeModal)">Contactez-moi
         </button>
         <button type="button" id="contactButtonDesktop" onclick="openModal($contactMeModal)">Contactez-moi
         </button>
