--- a/photographer.html
+++ b/photographer.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/8730c06133.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg" href="./images/favicon.svg" />
     <link rel="stylesheet" href="build/css/style.css">
+    <script src="./javascript/factory.js" defer></script>
     <script src="./javascript/photographer.js" defer></script>
     <title>FishEye - Nos photographes</title>
 </head>
