optimize dropdown elements

--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
         <nav aria-label="photographer categories" class="header_filter" role="links">
             <ul class="tag_list">
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="portrait">#portrait</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="event">#events</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="travel">#travel</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="animal">#animals</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a  class="tag_link" href="#" data-tag="sport">#sport</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="architecture">#architecture</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="art">#art</a>
                 </li>
 
                 <li>
-                    <span class="sr_only">Tag link</span>
+                    <span class="sr_only">tag</span>
                     <a class="tag_link" href="#" data-tag="fashion">#fashion</a>
                 </li>
             </ul>
