--- a/photographer.html
+++ b/photographer.html
@@ -37,7 +37,7 @@
                 <select name="dropdown" id="dropdown">
                     <option value="likes" role="option" tabindex="0">Popularité</option>
                     <option value="date" role="option" tabindex="0">Date</option>
-                    <option value="title" role="option">Titre</option>
+                    <option value="title" role="option" tabindex="0">Titre</option>
                 </select>
             </div>
         </section>
