optimize of lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -103,12 +103,16 @@
         <div class="content_modal"></div>
 
         <div class="modal_body">
-            <ul class = "img_title_lightbox "></ul>
-            <span id="close-light-box" class="close_modal close_modal_media" aria-label="Close contact form">
+            <div class = "img_title_lightbox "></div>
+            <button id="close-light-box" class="close_modal close_modal_media" aria-label="Close lightBox">
                 <i class="fas fa-times" title="close modal"></i>
-            </span>
-            <i id="next" class="fas fa-chevron-right" title="go to next media"></i>
-            <i id="previous" class="fas fa-chevron-left" title="go to the previous media"></i>;
+            </button>
+            <button id="next" class= "button-right" aria-label="go to next media" role="button">
+                <i class="fas fa-chevron-right"  tabindex="0"></i>
+            </button>
+            <button id="previous" class= "button-left" aria-label="go to previous media">
+                <i class="fas fa-chevron-left"  tabindex="0"></i>
+            </button>
         </div>
     </div>
     </div>
