optimize of lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -105,13 +105,13 @@
         <div class="modal_body">
             <div class = "img_title_lightbox "></div>
             <button id="close-light-box" class="close_modal close_modal_media" aria-label="Close lightBox">
-                <i class="fas fa-times" title="close modal"></i>
+                <em class="fas fa-times" title="close modal"></em>
             </button>
             <button id="next" class= "button-right" aria-label="go to next media" role="button">
-                <i class="fas fa-chevron-right"  tabindex="0"></i>
+                <em class="fas fa-chevron-right"  tabindex="0"></emm>
             </button>
             <button id="previous" class= "button-left" aria-label="go to previous media">
-                <i class="fas fa-chevron-left"  tabindex="0"></i>
+                <em class="fas fa-chevron-left"  tabindex="0"></em>
             </button>
         </div>
     </div>
