optimize of lightbox

--- a/photographer.html
+++ b/photographer.html
@@ -108,7 +108,7 @@
                 <em class="fas fa-times" title="close modal"></em>
             </button>
             <button id="next" class= "button-right" aria-label="go to next media" role="button">
-                <em class="fas fa-chevron-right"  tabindex="0"></emm>
+                <em class="fas fa-chevron-right"  tabindex="0"></em>
             </button>
             <button id="previous" class= "button-left" aria-label="go to previous media">
                 <em class="fas fa-chevron-left"  tabindex="0"></em>
